# VM

./: .gitignore  ChangeLog  Makefile  Makefile.in  README  README.md  config  config.status  configure  configure.ac  getch.c  main.c  seccode  test  vm  vm.h
asm/: Makefile  asm_error.c  asm_error.h  assembler.c  assembler.h  code_generator.c  code_generator.h  commands_table.c  commands_table.h  lexical_analyzer.c  lexical_analyzer.h  semantic_analyzer.c  semantic_analyzer.h  str_utils.c  str_utils.h  syntax_analyzer.c  syntax_analyzer.h  test.asm  test.c  test2.asm
include/: config.h  config.h.in  conio.h  queue.h  ui_cli.h  ui_winapi.h  ui_xcb.h  unix-conio.h
src/: Makefile  Makefile.am  Makefile.in  getch.c  main.c  winapi.c  xcb.c
src/.deps/: getch.Po  main.Po  winapi.Po  xcb.Po
